user api - follow functionality
