# server/server.go
@@ -41,10 +41,10 @@ func (s *Server) ServeAPI(listen string, contextPath string, swagHandler gin.Han
 		hackathon.DELETE("/fileStar", s.DeleteStarFile)
 
 		hackathon.POST("/user", s.UpdateUserProfile)
-		hackathon.GET("/user", s.GetUserProfile)
 		hackathon.GET("/user/purchases", s.GetUserPurchases)
 		hackathon.GET("/user/dashboard", s.GetUserDashboard)
 		hackathon.GET("/user/summary", s.GetUserSummary)
+		hackathon.POST("/user/follow/:address", s.FollowUser)
 
 		hackathon.GET("/collection", s.GetCollection)
 		hackathon.POST("/collection/recommendedTags", s.GetRecommendedTags)
@@ -65,6 +65,9 @@ func (s *Server) ServeAPI(listen string, contextPath string, swagHandler gin.Han
 
 	noSignature := r.Group(contextPath + "/api/v1")
 	{
+		noSignature.GET("/user", s.GetUserProfile)
+		noSignature.GET("/user/followings", s.GetUserFollowings)
+		noSignature.GET("/user/followers", s.GetUserFollowers)
 		noSignature.GET("/fileInfos", s.FileInfos)
 		noSignature.GET("/file/:fileId", s.FileInfo)
 		noSignature.GET("/search", s.GeneralSearch)
